@@ -15,7 +15,8 @@
 - added check for sql creation (goffy)
 - delete fields if table is deleted (goffy)
 - delete fields, tables, morefiles when deleting module (goffy)
-- fixed bug in creation of header.php (goffy)
+- fixed bug in creation of user header.php (goffy)
+- fixed bug in creation of user pages files (goffy)
 
 <h5>3.04 Alpha 1   [2020-06-12]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
